--- a/Aufgabe_2.3.2/stylesheet.css
+++ b/Aufgabe_2.3.2/stylesheet.css
@@ -1,8 +1,172 @@
 .Bilder {
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    border: 7px solid black;
+    box-shadow: 5px 5px 5px 5px grey;
+    background-color: white;
+    margin: 20px;
+    display: inline;
+    margin-right: 0px;
+
 }
 
+
+.Bilder:hover {
+    border: 4px solid maroon;
+    box-shadow: 7px 7px 7px 7px darkred;
+}
+
+#styleKopfRehkopf {
+    width: 210px;
+    margin-left: 230px;
+    margin-bottom: -30px;
+
+}
+
+#styleKoerperRehkoerper {
+    width: 285px;
+    margin-left: 20px;
+    margin-top: -15px;
+}
+
+#styleBeineRehbeine {
+    width: 310px;
+    margin-top: -4px;
+    margin-left: 20px;
+}
+
+
+#styleKopfZebrakopf {
+    width: 210px;
+    margin-left: 235px;
+    margin-bottom: -35px;
+
+}
+
+#styleKoerperZebrakoerper {
+    width: 270px;
+    margin-left: 25px;
+    margin-top: -8px;
+}
+
+#styleBeineZebrabeine {
+    width: 280px;
+    margin-top: -4px;
+    margin-left: 20px;
+}
+
+
+#styleKopfHundekopf {
+    width: 170px;
+    height: 200px;
+    margin-left: 250px;
+    margin-bottom: -45px;
+
+}
+
+#styleKoerperHundekoerper {
+    width: 240px;
+    height: 250px;
+    margin-left: 70px;
+    margin-top: -90px;
+}
+
+#styleBeineHundebeine {
+    width: 260px;
+    height: 100px;
+    margin-top: -12px;
+    margin-left: 70px;
+}
+
+#styleKopfPferdekopf {
+    width: 220px;
+    margin-left: 250px;
+    margin-bottom: -45px;
+
+}
+
+#styleKoerperPferdekoerper {
+    width: 240px;
+    margin-left: 70px;
+    margin-top: -90px;
+}
+
+#styleBeinePferdeebeine {
+    width: 260px;
+    margin-top: -12px;
+    margin-left: 70px;
+}
+
+
+
+h1 {
+    color:black;
+    font-weight: 400px;
+    font-size: 100px;
+    text-align: center;
+    letter-spacing: -10px;
+    margin-top: 0px;
+    transition: color 4s ease-in-out;
+}
+
+
 body {
-    background-color: bisque;
+    font-family: sans-serif;
+    background-color: white;
+}
+
+.container{
+    margin: 0px auto;
+
+
+}
+
+button {
+    width: 150px;
+    height: 40px;
+    color: white;
+    background-color: rgb(66, 65, 65);
+    margin-bottom: 30px;
+    margin-left: 325px;
+    margin-right: 325px;
+}
+
+button:hover {
+    background-color: maroon;
+}
+
+#flex-box{
+    float: right;
+    margin-top: -700px;
+    margin-right: 250px;
+    
+}
+
+
+#ende {
+    width: 800px;
+    margin: 0px auto;
+    
+}
+
+#kopfseite{
+    width: 800px;
+    margin: 0px auto;
+}
+
+#koerperseite{
+    width: 800px;
+    margin: 0px auto;
+}
+
+#beineseite{
+    width: 800px;
+    margin: 0px auto;
+}
+
+h2{
+    color:black;
+    font-weight: 200px;
+    font-size: 50px;
+    text-align: center;
+    letter-spacing: -5px;
 }
