--- a/Aufgabe_2.3.2/stylesheet.css
+++ b/Aufgabe_2.3.2/stylesheet.css
@@ -22,15 +22,15 @@
 
 #styleKoerperRehkoerper {
     width: 305px;
-    height: 110px;
+    height: 120px;
     margin-left: 20px;
     margin-top: -10px;
 }
 
 #styleBeineRehbeine {
-    width: 345px;
-    margin-top: -14px;
-    margin-left: 6px;
+    width: 350px;
+    margin-top: -12px;
+    margin-left: 0px;
 }
 
 
@@ -75,20 +75,20 @@
 }
 
 #styleKopfPferdekopf {
-    width: 210px;
+    width: 207px;
     margin-left: 230px;
     margin-bottom: -45px;
 
 }
 
 #styleKoerperPferdekoerper {
-    width: 310px;
+    width: 307px;
     margin-left: 20px;
     margin-top: -15px;
 }
 
 #styleBeinePferdebeine {
-    width: 315px;
+    width: 312px;
     margin-top: -12px;
     margin-left: 20px;
 }
@@ -131,21 +131,21 @@ button:hover {
 }
 
 
-#flex-box1{
+#position{
     float: right;
     margin-top: -1300px;
     margin-left: 600px;
     
 }
 
-#flex-box2{
+#position2{
     float: right;
     margin-top: -700px;
     margin-left: 700px;
     
 }
 
-#flex-box3{
+#position3{
     float: right;
     margin-top: -500px;
     margin-left: 700px;
@@ -193,8 +193,9 @@ header {
 }
 
 #ausgabeNachricht {
-    font-weight: 30px;
+    font-weight: 40px;
     text-align: center;
+    letter-spacing: -1px;
 }
 
 #Fehler {
