--- a/Prüfungsaufgabe/stylesheet.css
+++ b/Prüfungsaufgabe/stylesheet.css
@@ -1,5 +1,5 @@
 header {
-    background-color: rgba(52, 58, 50, 0.822);
+    background-image: url(furtwangen2.jpg);
     margin-top: -45px;
     padding: 0px 50px 20px 50px;
     box-shadow: 0px 0px 30px 0px black;
@@ -13,7 +13,12 @@ h1 {
     letter-spacing: -7px;
     padding: 40px 0px 0px 0px;   
     text-shadow: 0 0 10px black;
-    transition: color 4s ease-in-out;
+    transition: color 5s ease-in-out;
+}
+
+h1:hover {
+
+    color: rgb(84, 228, 84);
 }
 
 
@@ -38,19 +43,15 @@ body {
     
 }
 
-#wrapper{
-    width: 800px;
-    margin: 0px auto;
-   
-}
-
-
 #reservierenLink {
+    display: inline-table;
+    margin-top: -300x;
     background-color: white;
-    width: 300px;
-    height: 50px;
+    width: 230px;
+    height: 30px;
     margin-left: 70%;
-    margin-top: 40px;
+    margin-top: 50px;
+    padding-top: 7px;
     text-align: center;
     font-size: 20px;
     border: 4px dotted rgb(53, 65, 56);
@@ -58,36 +59,22 @@ body {
 }
 
 #reservierenLink:hover {
-    background-color: rgb(47, 51, 44);
-    border: 6px dotted rgba(208, 235, 208, 0.76);
-}
-
-#arikeluebersichtLink {
-    background-color: white;
-    width: 300px;
-    height: 50px;
-    margin-left: 100px;
-    margin-top: 40px;
-    text-align: center;
-    font-size: 20px;
-    border: 4px dotted rgb(53, 65, 56);
-    transition: background-color 1s ease-in-out;
-}
-
-#arikeluebersichtLink:hover {
-    background-color: rgb(47, 51, 44);
-    border: 6px dotted rgba(208, 235, 208, 0.76);
+    cursor: pointer;
+    background-color: rgb(62, 65, 60);
+    cursor:pointer;
+    border: 2px dotted rgba(208, 235, 208, 0.76);
 }
 
 
-a{
+
+nav a{
     color:rgb(31, 34, 32);
     text-decoration: none;
     letter-spacing: -1px;
     
 }
 
-a:hover {
+nav a:hover {
     color: white;
 }
 
@@ -101,7 +88,7 @@ a:hover {
     
 }
 
-.buttonAusgeliehen {
+.ausgeliehen button {
     background-color:lightgray;
     color: gray;
     width: 155px;
@@ -112,11 +99,10 @@ a:hover {
     
 }
 
-img {
+h2 + img {
     width: 400px;
-   
     object-fit: contain;
-    max-height: 320px;
+    max-height: 280px;
     border-radius: 10px;
     margin-left: 15px;
     margin-top: -90px;
@@ -128,7 +114,7 @@ img {
     filter: grayscale(1); 
 }
 
-div div {
+#content div {
     margin: 60px;
 }
 
@@ -147,7 +133,7 @@ div div {
     float: left;
 }
 
-#gebuehrGesamt {
+#summe + p {
     margin-top: 25px;
     margin-left: 300px;
     margin-right: -20px;
@@ -160,7 +146,6 @@ nav + div {
     height: 70px;
     margin-left: 110px;
     margin-right: 870px;
-    padding-bottom: 0px;
     background: linear-gradient(to right, rgb(209, 207, 195), white);
     border: 2px inset lightgray;
     
@@ -190,6 +175,7 @@ div > button{
 }
 
 .buttonReservieren:hover {
+    cursor: pointer;
     border: 2px inset grey;
     background: linear-gradient(to bottom, rgb(115, 145, 122), white);
     
@@ -199,17 +185,42 @@ div > button{
 
 /*ReservierungSeite*/
 
+#arikeluebersichtLink {
+    display: inline-table;
+    background-color: white;
+    width: 230px;
+    height: 30px;
+    padding-top: 7px;
+    margin-left: 100px;
+    margin-top: 40px;
+    text-align: center;
+    font-size: 20px;
+    border: 4px dotted rgb(53, 65, 56);
+    transition: background-color 1s ease-in-out;
+}
+
+#arikeluebersichtLink:hover {
+    cursor: pointer;
+    background-color: rgb(47, 51, 44);
+    cursor:pointer;
+    border: 3px dotted rgba(208, 235, 208, 0.76);
+}
+
 form {
     font-size: 25px;
     letter-spacing: -1px;
     margin-left: 40%;
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
-input {
+
+form input {
+    margin-left: 130px;
+    margin-top: -30px;
+    margin-bottom: 10px;
+    display: flex;
     width: 150px;
     height: 22px;
-    margin: 5px;
     border: 2px inset rgb(73, 77, 73);
     background: linear-gradient(to right, rgb(226, 226, 226), white);
 }
@@ -225,15 +236,13 @@ input ~ button {
 }
 
 input ~ button:hover {
+    cursor: pointer;
     background: linear-gradient(to bottom, rgb(52, 68, 53), rgb(159, 175, 153));
     color: white;
     font-weight: bolder;
     transition: color 1s ease-in-out;
 }
 
-#arikeluebersicht {
-    margin-right: 700px;
-}
 
 #serverAntwort {
     font-size: 20px;
@@ -242,37 +251,42 @@ input ~ button:hover {
     font-weight: bolder;
 }
 
+ nav ~ p {
+    margin-top: 40px;
+    color:  rgb(94, 99, 91);
+    font-weight: bolder;
+    text-align: center;
+    font-size: 20px;
+ }
 
 @media screen and (max-width: 600px) {
 
-    .wrapper{
-        width: 100%;
-        margin: 0px auto;
-    }
-    
+   
     h1 {
+        letter-spacing: -3px;;
         font-weight: 400px;
         font-size: 60px;
     }
 
     h1 + p {
+        box-shadow: 0px 0px 30px 0px black;
+        background-color: rgba(24, 24, 24, 0.781);
+        box-shadow: 0px 0px 30px 0px black;
         font-size: 20px;
-        letter-spacing: -1px;
+        letter-spacing: -px;
     }
     
     h2 {
         font-size: 35px;
         margin-left: 45px;
-        letter-spacing: -2px;
-        
+        letter-spacing: -1px;   
     }
 
-
-
     #reservierenLink {
+       width: 230px;
+       height: 30px;
        margin-left: 50%;
        width: 200px;
-       height: 45px;
        font-size: 17px;
        border: 3px dotted rgb(53, 65, 56);
     }
@@ -292,7 +306,7 @@ input ~ button:hover {
         border-radius: 10px;;
     }
     
-    .buttonAusgeliehen {
+    .ausgeliehen button {
         font-size: 18px;
         border: 3px dotted rgb(146, 145, 145);
         margin-left: 60px;
@@ -301,7 +315,7 @@ input ~ button:hover {
         height: 40px;
     }
 
-    img {
+    h2 + img {
         width: 200px;
         border-radius: 20px;
         margin-top: -10px;
@@ -309,7 +323,8 @@ input ~ button:hover {
         float: none;
         margin-left: 13%;
     }
-    div div {
+    
+    #content div {
         margin: 15px;
     }
     
@@ -319,7 +334,7 @@ input ~ button:hover {
        padding: 1px;
     }
 
-    #gebuehrGesamt {
+    #summe + p {
         margin-top: 20px;
         margin-left: 250px;
         margin-right: -20px;
@@ -359,7 +374,7 @@ input ~ button:hover {
         margin-top: 40px;
     }
     
-    input {
+    form input {
         width: 150px;
         height: 22px;
         margin: 5px;
@@ -376,7 +391,7 @@ input ~ button:hover {
     
     #arikeluebersichtLink {
         width: 200px;
-        height: 45px;
+        height: 30px;
         margin-left: 50px;
         font-size: 17px;
         border: 3px dotted rgb(53, 65, 56);
@@ -386,6 +401,10 @@ input ~ button:hover {
         font-size: 16px;
         margin-left: 140px;
     }
+
+    nav ~ p {
+        font-size: 16px;
+    }
     
 
   
@@ -394,11 +413,6 @@ input ~ button:hover {
 
 @media screen and (min-width: 600px) and (max-width: 1024px){
 
-    .wrapper{
-        width: 100%;
-    
-
-    }
 
     h1 {
         font-size: 60px;
@@ -415,9 +429,10 @@ input ~ button:hover {
     } 
 
     #reservierenLink {
-        width: 300px;
-        height: 50px;
+        width: 230px;
+        height: 30px;
         margin-right: 20px;
+        padding-top: 7px;
         margin-left: 45%;
         margin-top: 40px;
         text-align: center;
@@ -432,15 +447,14 @@ input ~ button:hover {
     }
     
     .ausgeliehen {
-        width: 100%;
+        width: 90%;
         background-color: rgba(211, 211, 211, 0.507);
         padding: 7px;
         border-radius: 20px;;
   
     }
     
-    .buttonAusgeliehen {
-
+    .ausgeliehen button {
         border: 3px dotted rgb(122, 120, 120);
         margin-left: 40px;
         font-size: 18px;
@@ -449,7 +463,7 @@ input ~ button:hover {
         
     }
     
-    img {
+    h2 + img {
         width: 280px;
         max-height: 255px;
         border-radius: 5px;
@@ -458,21 +472,21 @@ input ~ button:hover {
         margin-right: 20px;
         margin-top: 0px;
         float: left;
-        margin-bottom: 0px;
+        margin-bottom: 70px;
     }
 
-    div div {
+    #content div {
         margin-top: 20px;
         margin-left: 20px;
     }
     
     .selected {
-        width: 100%;
+        width: 90%;
         border-radius: 40px;
         padding: 15px;
     } 
     
-    #gebuehrGesamt {
+    #summe + p {
         margin-top: 20px;
         margin-left: 215px;
         margin-right: 20px;
@@ -516,7 +530,7 @@ input ~ button:hover {
         margin-top: 40px;
     }
     
-    input {
+    form input {
         width: 150px;
         height: 22px;
         margin: 5px;
@@ -536,8 +550,9 @@ input ~ button:hover {
         margin-left: 240px;
     }
     
-    
+    nav ~ p {
+        font-size: 18px;
+    }
 
-    
 }
 
