--- a/Prüfungsaufgabe/stylesheetVerwaltung.css
+++ b/Prüfungsaufgabe/stylesheetVerwaltung.css
@@ -1,5 +1,5 @@
 header {
-    background-color: rgba(52, 58, 50, 0.822);
+    background-image: url(furtwangen2.jpg);
     margin-top: -45px;
     padding: 0px 50px 20px 50px;
     box-shadow: 0px 0px 30px 0px black;
@@ -35,13 +35,7 @@ body {
     background-color:rgba(208, 235, 208, 0.76);
 }
 
-#wrapper{
-    width: 800;
-    margin: 0px auto;
-   
-}
-
-div + div {
+.data div {
     margin-top: 30px;
     padding-bottom: 20px;
     box-shadow:rgba(0,0,0.4,0.1) 0px 5px 10px;
@@ -155,7 +149,7 @@ h2 + button {
        
     }
     
-    div + div {
+    .data div {
         margin-top: 0px;
         padding-bottom: 20px;
         box-shadow:rgba(0,0,0.4,0.1) 0px 5px 10px;
@@ -220,7 +214,7 @@ h2 + button {
        font-size: 30px;
     }
 
-    div + div {
+    .data div {
         margin-top: 20px;
         padding-bottom: 20px;
         box-shadow:rgba(0,0,0.4,0.1) 0px 3px 8px;
